[package]
name = "bench-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = [ "derive" ] }
futures = { version = "0.3" }
tokio = { version = "1.16", features = [ "full" ] }
tokio-util = { version = "0.6.9", features = [ "codec" ] }

[dev-dependencies]